tests/negative/lambda_dup_args.spk
; Duplicated argument names in a lambda definition must raise VALUE_EXCEPTION
(let f (lambda (x y x) x))
